Bugs: Some title is too long for mobile devices

--- a/source/css/_common/_component/posts-expand.styl
+++ b/source/css/_common/_component/posts-expand.styl
@@ -21,6 +21,7 @@
 .posts-expand .post-title {
   font-size: 26px;
   text-align: center;
+  word-break: break-word;
 
   +mobile() {
     font-size: 22px;
